Dashboard page spacing fixes

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -16,6 +16,7 @@ $color-bg: #f0f3f6 !default;
 
 $color-text: #4f5f6f !default;
 $color-text-light: #7e8e9f !default;
+$color-text-muted: #C2CCD6;
 $color-text-inverse: #ffffff !default;
 $color-text-passive: #c5c5c5 !default;
 
