--- a/src/app/dashboard/sales-by-countries/sales-by-countries.scss
+++ b/src/app/dashboard/sales-by-countries/sales-by-countries.scss
@@ -1,4 +1,4 @@
-#sales-map {
+.dashboard-page #sales-map {
 
 	.jqvmap-zoomin,
 	.jqvmap-zoomout {
